--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Generation Catalyst - Professional Estate Planning Services" />
-    <meta name="keywords" content="estate planning, wills, trusts, legal services, probate, financial planning" />
+    <meta name="keywords" content="estate planning, wills, trusts, legal services, financial planning" />
     <title>Generation Catalyst - Estate Planning</title>
   </head>
   <body>
